@@ -28,13 +28,10 @@ matrix:
      - os: linux
        env: CUSTOM_JDK="default"
 
+addons:
+  hostname: jyshort
+
 before_install:
-  # Patch for buffer overflow bug, see https://github.com/travis-ci/travis-ci/issues/5227
-  - hostname
-  - cat /etc/hosts # optionally check the content *before*
-  - sudo hostname "$(hostname | cut -c1-63)"
-  - sed -e "s/^\\(127\\.0\\.0\\.1.*\\)/\\1 $(hostname | cut -c1-63)/" /etc/hosts | sudo tee /etc/hosts
-  - hostname
   - cat /etc/hosts # optionally check the content *after*
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then export JAVA_HOME=$(/usr/libexec/java_home); fi
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew update; fi
